poprawione,ale nie doskonale

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -111,14 +111,14 @@
 		<button  id="1" onclick="pokaz(this.id)"></button>
 		<button  id="2" onclick="pokaz(this.id)"></button>
 		<button  id="3" onclick="pokaz(this.id)"></button>
-		<p></p>
+		<div></div>
 		<button  id="4" onclick="pokaz(this.id)"></button>
 		<button  id="5" onclick="pokaz(this.id)"></button>
 		<button  id="6" onclick="pokaz(this.id)"></button>
-		<p></p>
+		<div></div>
 		<button  id="7" onclick="pokaz(this.id)"></button>
 		<button  id="8" onclick="pokaz(this.id)"></button>
 		<button  id="9" onclick="pokaz(this.id)"></button>
-		<p></p>
+		<div></div>
 		<p id = "WYNIK">0 : 0 </p>
 </body>
